fix: add pull-data cmd

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "preview": "astro preview",
     "create:post": "node scripts/create-file.mjs blog-post",
     "create:archive": "node scripts/create-file.mjs archive-post",
+    "pull-data": "node scripts/pull-data.mjs",
     "astro": "astro"
   },
   "dependencies": {
