fix: add pull-data cmd

--- a/.env
+++ b/.env
@@ -10,8 +10,8 @@ SITE_INDEX_TITLE="<em>PoeMagie</em>"
 SITE_DESCRIPTION="Welcome to my blog!"
 
 # Deploys to GitHub Pages
-SITE="https://myriad-dreamin.github.io"
-URL_BASE="/blog/"
+SITE="https://pxwg.github.io/xuetui_1"
+URL_BASE="/xuetui_1/"
 
 # Deploys to My Blog Site
 # SITE="https://www.myriad-dreamin.com"
