--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -49,8 +49,8 @@ jobs:
           mkdir -p ./assets/fonts
           curl -L https://github.com/Myriad-Dreamin/shiroa/releases/download/v0.1.5/source-han-serif-font-assets.tar.gz | tar -xvz -C assets/fonts
       - run: pnpm install
-      - name: Pull Data from Backend (Optional)
-        run: pnpm run pull-data
+      # - name: Pull Data from Backend (Optional)
+      #   run: pnpm run pull-data
       - run: pnpm build
       - name: Setup Pages
         uses: actions/configure-pages@v5
