update: layout for the usages

--- a/.env
+++ b/.env
@@ -5,9 +5,9 @@
 # while .env are environment variables that are used by both *Astro and Scripts*.
 
 # Static Site Configuration
-SITE_TITLE=Poemagie
-SITE_INDEX_TITLE="<em>PoeMagie</em>"
-SITE_DESCRIPTION="Welcome to my blog!"
+SITE_TITLE=" "
+SITE_INDEX_TITLE="<em>清华大学学术推进计划成果展示</em>"
+SITE_DESCRIPTION="本网站旨在展示清华大学学术推进计划的项目成果"
 
 # Deploys to GitHub Pages
 SITE="https://pxwg.github.io/xuetui_1"
@@ -17,6 +17,6 @@ URL_BASE="/xuetui_1/"
 # SITE="https://www.myriad-dreamin.com"
 # URL_BASE=""
 
-# Please remove them if you don't like to use backend.
-BACKEND_ADDR=https://glittery-valkyrie-8fbf14.netlify.app/api
-BAIDU_VERIFICATION_CODE=codeva-FnEGCWzDkT
+# # Please remove them if you don't like to use backend.
+# BACKEND_ADDR=https://glittery-valkyrie-8fbf14.netlify.app/api
+# BAIDU_VERIFICATION_CODE=codeva-FnEGCWzDkT
