update: url base for blog site

--- a/.env
+++ b/.env
@@ -14,8 +14,8 @@ SITE="https://pxwg.github.io/xuetui_1"
 URL_BASE="/xuetui_1/"
 
 # Deploys to My Blog Site
-# SITE="https://www.myriad-dreamin.com"
-# URL_BASE=""
+SITE="https://www.xuetui-cars.com"
+URL_BASE=""
 
 # # Please remove them if you don't like to use backend.
 # BACKEND_ADDR=https://glittery-valkyrie-8fbf14.netlify.app/api
