update: site title

--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@
 # while .env are environment variables that are used by both *Astro and Scripts*.
 
 # Static Site Configuration
-SITE_TITLE=" "
+SITE_TITLE="清华大学学术推进计划"
 SITE_INDEX_TITLE="<em>清华大学学术推进计划成果展示</em>"
 SITE_DESCRIPTION="本网站旨在展示清华大学学术推进计划的项目成果"
 
