update: add pdf preview

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "astro-typst": "0.9.0-rc1"
   },
   "devDependencies": {
-    "vite": "^6.3.5"
+    "vite": "^6.3.5",
+    "vite-plugin-static-copy": "^0.16.0"
   }
 }
