ci: update workflow

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -48,7 +48,7 @@ jobs:
         run: |
           mkdir -p ./assets/fonts
           curl -L https://github.com/Myriad-Dreamin/shiroa/releases/download/v0.1.5/source-han-serif-font-assets.tar.gz | tar -xvz -C assets/fonts
-      - run: pnpm install --no-frozen-lockfile
+      - run: pnpm install
       # - name: Pull Data from Backend (Optional)
       #   run: pnpm run pull-data
       - run: pnpm build
