--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
     "@astrojs/rss": "^4.0.11",
     "@astrojs/sitemap": "^3.4.0",
     "@fontsource-variable/inter": "^5.2.5",
-    "@myriaddreamin/typst-ts-node-compiler": "^0.6.0-rc1",
     "@myriaddreamin/tylant": "workspace:^",
     "@myriaddreamin/tylant-theme-toggle": "workspace:^",
+    "@myriaddreamin/typst-ts-node-compiler": "^0.6.0-rc1",
     "astro": "^5.8.0",
-    "astro-typst": "0.9.0-rc1"
+    "astro-typst": "0.9.0-rc1",
+    "pdfjs-dist": "^5.4.149"
   },
   "devDependencies": {
     "vite": "^6.3.5",
